# Beat-IT

./: .gitignore  CMakeLists.txt  README.md
include/: enemy.hpp  hud.hpp  menu.hpp  player.hpp  stage.hpp
src/: enemy.cpp  hud.cpp  main.cpp  menu.cpp  player.cpp  stage.cpp
